# fireapi

./: .gitignore  README.md  pyproject.toml
coding challenge/: predict.py  writeDockerfile.py
example2/: api.py  model.h5
examples/: Dockerfile  api.py  requirements.txt
examples/api/: api.py
fireapi/: __init__.py  fireapi.py  models.py  server.py
fireapi/aws/: iam_methods.py  utils.py
fireapi/aws/data/: spot_instance_pricing.csv
helloworld/: .gitignore  app.py
helloworld/.chalice/: config.json
mlapi/: api.py  base.py  mlapi.py  processor.py
